--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </li>
                 <li>
                     <a href="https://www.youtube.com/@kevingeorgemathew5614">
-                        <img src="./assets/youtube.png" alt="linkedin" width="35" height="35">
+                        <img src="./assets/youtube.png" alt="youtube" width="35" height="35">
                     </a>
                 </li>
             </ul>
@@ -58,7 +58,7 @@
                     <br>
                     <br>
                     <br>
-                    <img src="./assets/software-engineer.png" alt="linkedin" width="300" height="300">
+                    <img src="./assets/software-engineer.png" alt="Engineer" width="300" height="300">
                     <br>
                     <br>
                     <br>
